--- a/conference/schedule/event/9/index.html
+++ b/conference/schedule/event/9/index.html
@@ -148,8 +148,8 @@
 
 <br/><br/>
 <!-- AddThis Button BEGIN -->
-<script type="text/javascript">addthis_pub  = 'pycon2009';</script>
-<a href="http://www.addthis.com/bookmark.php" title='PyCon 2009: State of CPython and Python Ecosystem' onMouseOver="return addthis_open(this, '', 'http://pycon-au.org/2011/conference/schedule/event/9/', this.title)" onMouseOut="addthis_close()" onClick="return addthis_sendto()"><img src="http://s9.addthis.com/button1-share.gif" width="125" height="16" border="0" alt="" /></a>
+<script type="text/javascript">addthis_pub  = 'pyconau2011';</script>
+<a href="http://www.addthis.com/bookmark.php" title='PyCon AU 2011: State of CPython and Python Ecosystem' onMouseOver="return addthis_open(this, '', 'http://pycon-au.org/2011/conference/schedule/event/9/', this.title)" onMouseOut="addthis_close()" onClick="return addthis_sendto()"><img src="http://s9.addthis.com/button1-share.gif" width="125" height="16" border="0" alt="" /></a>
 <script type="text/javascript" src="http://s7.addthis.com/js/152/addthis_widget.js"></script>
 <!-- AddThis Button END -->
 
