Rightnaming historic record

--- a/conference/index.html
+++ b/conference/index.html
@@ -145,7 +145,7 @@
 <li>Developing Scientific Software in Python  (Duncan Gray)</li>
 <li>Fun with App Engine 1.5.0  (Greg Darke)</li>
 <li>Hosting Python Web Applications  (Graham Dumpleton)</li>
-<li>How Python Evolves (and How You Can Help Make It Happen)  (Nick Coghlan)</li>
+<li>How Python Evolves (and How You Can Help Make It Happen)  (Alyssa Coghlan)</li>
 <li>Infinite 8-bit Platformer  (Chris McCormick)</li>
 <li>Networking Libraries in Python.  (Senthil Kumaran)</li>
 <li>Pants - Network Programming Made Easy  (Evan Davis)</li>
@@ -165,7 +165,7 @@
 <li>Easy site migration using Diazo and Funnelweb  (Adam Terrey)</li>
 <li>How to maintain big app stacks without losing your mind  (Dylan Jay)</li>
 <li>Introduction to the Geospatial Web with GeoDjango  (Javier Candeira)</li>
-<li>Panel: Python 3  (Nick Coghlan, Raymond Hettinger, Richard Jones)</li>
+<li>Panel: Python 3  (Alyssa Coghlan, Raymond Hettinger, Richard Jones)</li>
 <li>Panel: Python in the webs  (Malcolm Tredinnick, Russell Keith-Magee,
 Dylan Jay, Richard Jones)</li>
 <li>Pyramid: Lighter, faster, better web apps  (Dylan Jay)</li>
