--- a/conference/schedule/event/12/index.html
+++ b/conference/schedule/event/12/index.html
@@ -124,7 +124,7 @@
 
 <h3 style="margin-top: 3px; margin-bottom: 3px;">How Python Evolves (and How You Can Help Make It Happen)</h3>
 
-<p><span style="white-space: nowrap; font-size: smaller; font-weight: bold; padding-left: 1em;"><a href="http://www.boredomandlaziness.org">Mr. Nick Coghlan</a> <sup><a href="../../../../profile/04f2/index.html" title="bio">bio</a></sup></span>
+<p><span style="white-space: nowrap; font-size: smaller; font-weight: bold; padding-left: 1em;"><a href="http://www.boredomandlaziness.org">Ms. Alyssa Coghlan</a> <sup><a href="../../../../profile/04f2/index.html" title="bio">bio</a></sup></span>
 <br/><span style="white-space: nowrap; padding-left: 1em; font-size: smaller; font-weight: bold;">30min &loz;&loz; Intermediate</span>
 <br/><span style="white-space: nowrap; padding-left: 1em; font-size: smaller; font-weight: bold;">Saturday 11:00am, Grand Lodge</span>
 <br/><span style="padding-left: 1em; font-size: smaller; font-weight: bold;">categories:
