--- a/conference/schedule/event/16/index.html
+++ b/conference/schedule/event/16/index.html
@@ -124,14 +124,14 @@
 
 <h3 style="margin-top: 3px; margin-bottom: 3px;">Panel: Python 3</h3>
 
-<p><span style="white-space: nowrap; font-size: smaller; font-weight: bold; padding-left: 1em;">Mr. Anthony Baxter Esq. (<a href="http://www.google.com">Google</a>) <sup><a href="../../../../profile/0343a1/index.html" title="bio">bio</a></sup></span><span style="white-space: nowrap; font-size: smaller; font-weight: bold; ">, <a href="http://www.boredomandlaziness.org">Mr. Nick Coghlan</a> <sup><a href="../../../../profile/04f2/index.html" title="bio">bio</a></sup></span><span style="white-space: nowrap; font-size: smaller; font-weight: bold; ">, Raymond D Hettinger <sup><a href="../../../../profile/076248/index.html" title="bio">bio</a></sup></span><span style="white-space: nowrap; font-size: smaller; font-weight: bold; ">, Richard Jones</span>
+<p><span style="white-space: nowrap; font-size: smaller; font-weight: bold; padding-left: 1em;">Mr. Anthony Baxter Esq. (<a href="http://www.google.com">Google</a>) <sup><a href="../../../../profile/0343a1/index.html" title="bio">bio</a></sup></span><span style="white-space: nowrap; font-size: smaller; font-weight: bold; ">, <a href="http://www.boredomandlaziness.org">Ms. Alyssa Coghlan</a> <sup><a href="../../../../profile/04f2/index.html" title="bio">bio</a></sup></span><span style="white-space: nowrap; font-size: smaller; font-weight: bold; ">, Raymond D Hettinger <sup><a href="../../../../profile/076248/index.html" title="bio">bio</a></sup></span><span style="white-space: nowrap; font-size: smaller; font-weight: bold; ">, Richard Jones</span>
 <br/><span style="white-space: nowrap; padding-left: 1em; font-size: smaller; font-weight: bold;">45min &loz; Beginner</span>
 <br/><span style="white-space: nowrap; padding-left: 1em; font-size: smaller; font-weight: bold;">Saturday 01:10pm, Grand Lodge</span>
 <br/><span style="padding-left: 1em; font-size: smaller; font-weight: bold;">categories:
     
         <a href='../../../talks/index.html?filter=advocacy'>advocacy</a>, <a href='../../../talks/index.html?filter=language'>language</a>
     </span>
-<div style="padding-left: 2em;">This is a panel discussion in which Nick Coghlan, Raymond Hettinger and Richard Jones discuss the state of Python 3,
+<div style="padding-left: 2em;">This is a panel discussion in which Alyssa Coghlan, Raymond Hettinger and Richard Jones discuss the state of Python 3,
 <br/>some of the new features, the 3rd party adoption, migration strategies and open to the floor for questions.</div></p>
 
 <br/>
