--- a/conference/schedule/ical/index.html
+++ b/conference/schedule/ical/index.html
@@ -177,7 +177,7 @@ URL:http://127.0.0.1:8000/2011/schedule/
 END:VEVENT
 BEGIN:VEVENT
 SUMMARY:How Python Evolves (and How You Can Help Make It Happen)
-DESCRIPTION:Room: Grand Lodge\nPresenters: Mr. Nick Coghlan\n30min Intermedi
+DESCRIPTION:Room: Grand Lodge\nPresenters: Ms. Alyssa Coghlan\n30min Intermedi
  ate\ncategories: \nThe CPython reference interpreter lies at the heart of a
   much wider Python ecosystem. The decisions that shape the future developme
  nt of CPython ripple out and have a broad impact on the entire Python commu
@@ -281,7 +281,7 @@ BEGIN:VEVENT
 SUMMARY:Panel: Python 3
 DESCRIPTION:Room: Grand Lodge\nPresenters: Mr. Anthony Baxter Esq.\, Mr. Nic
  k Coghlan\, Raymond D Hettinger\, Richard Jones\n45min Beginner\ncategories
- : \nThis is a panel discussion in which Nick Coghlan\, Raymond Hettinger an
+ : \nThis is a panel discussion in which Alyssa Coghlan\, Raymond Hettinger an
  d Richard Jones discuss the state of Python 3\,\nsome of the new features\,
   the 3rd party adoption\, migration strategies and open to the floor for qu
  estions.
