--- a/conference/schedule/index.html
+++ b/conference/schedule/index.html
@@ -383,7 +383,7 @@ Calendar Feed
         11:00am
         </td>
         <td  class="event30" id='E012'  onclick="mouseclick(this);"><span class="hidden"></span><span id='ICOS7' name="ICO12"
-            class='hidden'></span><a class="eventinfo" id='TT7' href='event/12/index.html'>How Python Evolves (and How You Can Help Make It Happen)</a><br/><span style="font-size: smaller; font-style: italic;">Mr. Nick Coghlan</span><br/>&loz;&loz;
+            class='hidden'></span><a class="eventinfo" id='TT7' href='event/12/index.html'>How Python Evolves (and How You Can Help Make It Happen)</a><br/><span style="font-size: smaller; font-style: italic;">Ms. Alyssa Coghlan</span><br/>&loz;&loz;
         </td>
         <td  class="event30" id='E013'  onclick="mouseclick(this);"><span class="hidden"></span><span id='ICOS8' name="ICO13"
             
@@ -416,7 +416,7 @@ Calendar Feed
         01:10pm
         </td>
         <td  class="event45" id='E016'  onclick="mouseclick(this);"><span class="hidden"></span><span id='ICOS13' name="ICO16"
-            class='hidden'></span><a class="eventinfo" id='TT13' href='event/16/index.html'>Panel: Python 3</a><br/><span style="font-size: smaller; font-style: italic;">Mr. Anthony Baxter Esq., Mr. Nick Coghlan, Raymond D Hettinger, Richard Jones</span><br/>&loz;
+            class='hidden'></span><a class="eventinfo" id='TT13' href='event/16/index.html'>Panel: Python 3</a><br/><span style="font-size: smaller; font-style: italic;">Mr. Anthony Baxter Esq., Ms. Alyssa Coghlan, Raymond D Hettinger, Richard Jones</span><br/>&loz;
         </td>
         <td  class="event45" id='E017'  onclick="mouseclick(this);"><span class="hidden"></span><span id='ICOS14' name="ICO17"
             
