--- a/profile/04f2/index.html
+++ b/profile/04f2/index.html
@@ -7,7 +7,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
-    <title>Mr. Nick Coghlan - PyCon Australia 2011 Sydney - August 20/21 - A Conference for the Australian Python Community</title>
+    <title>Ms. Alyssa Coghlan - PyCon Australia 2011 Sydney - August 20/21 - A Conference for the Australian Python Community</title>
     <link rel="stylesheet" type="text/css" href="../..//css/base.css" />
     <meta name="robots" content="index,follow" />
     
@@ -120,10 +120,10 @@
           <div id="content">
             
 
-    <div><a href="http://www.boredomandlaziness.org">Mr. Nick Coghlan</a> <sup><a href="index.html" title="bio">bio</a></sup></div>
-    <div style="margin-left: 4em;">Nick is a software developer for the Red Hat Engineering Operations team in Brisbane, Australia, working on various internal Red Hat systems.
+    <div><a href="http://www.boredomandlaziness.org">Ms. Alyssa Coghlan</a> <sup><a href="index.html" title="bio">bio</a></sup></div>
+    <div style="margin-left: 4em;">Alyssa is a software developer for the Red Hat Engineering Operations team in Brisbane, Australia, working on various internal Red Hat systems.
 
-He has been a long-time contributor to the development of the CPython reference interpreter, is the author or co-author of 3 accepted Python Enhancement Proposals (338, 343 and 366) and is a member of the Python Software Foundation.</div>
+She has been a long-time contributor to the development of the CPython reference interpreter, is the author or co-author of 3 accepted Python Enhancement Proposals (338, 343 and 366) and is a member of the Python Software Foundation.</div>
 
 
           </div>
